# jenkinsanddocker

./: CMakeLists.txt  Dockerfile  Jenkinsfile
Modules/: AddTests.cmake  AddTestsAndCoverage.cmake  EnableCoverageReport.cmake
helper/: ctest-to-junit.xsl
images/linux/: Dockerfile
images/win/: Dockerfile
include/: DLLDefines.h  mylib.h
jenkins/: docker-compose.yml
jenkins/data/: Dockerfile
jenkins/master/: Dockerfile  plugins.txt  run.sh
jenkins/sonar/: Dockerfile  run.sh
src/: main.cpp  mylib.cpp
test/: addTwoNumbersTest.cpp
